--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@azure/msal-browser": "^2.34.0",
     "@azure/msal-react": "^1.5.4",
     "@fluentui/react-components": "^9.18.0",
+    "@fluentui/react-icons": "^2.0.196",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
